--- a/Triviador/UI/forms/NumericQuestion.ui
+++ b/Triviador/UI/forms/NumericQuestion.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>748</width>
-    <height>597</height>
+    <height>624</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -171,7 +171,7 @@
            </font>
           </property>
           <property name="text">
-           <string>Trimiter răspuns</string>
+           <string>Trimite răspuns</string>
           </property>
          </widget>
         </item>
